--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "dotenv": "^10.0.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.14"
   }
