--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -12,25 +12,28 @@ jobs:
     
     services:
       mysql:
-        image: mysql
-        env:
+        image: mysql:latest
+        ports:
+          - 3306:3306
+        environment:
           MYSQL_DATABASE: company
           MYSQL_USER: root
           MYSQL_PASSWORD: Gwada97195
           MYSQL_ROOT_PASSWORD: Gwada97195
-        ports:
-          - 3306:3306
     
     strategy:
       matrix:
         node-versions: [10.x]
     
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
+      - uses: actions/checkout@v1
+      - name: Verify MySQL connection
+        env:
+          PORT: 3306
+        run: |
+          while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
+            sleep 1
+          done     
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
