test image mysql#4

--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -13,7 +13,7 @@ jobs:
     services:
       mysql:
         image: mysql
-        environment:
+        env:
           MYSQL_DATABASE: company
           MYSQL_USER: root
           MYSQL_PASSWORD: Gwada97195
