--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -6,18 +6,21 @@ on:
   pull_request:
     branches: [main]
 
+defaults:
+  run:
+    working-directory: ./mysql
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
     
     services:
       mysql:
-        image: mysql
+        image: mysql:latest
         env:
-          MYSQL_DATABASE: company
-          MYSQL_USER: root
-          MYSQL_PASSWORD: Gwada97195
-          MYSQL_ROOT_PASSWORD: Gwada97195
+          MYSQL_USER: ${DB_HOST}
+          MYSQL_PASSWORD: ${DB_PASSWORD}
         ports:
           - 3306:3306
     
@@ -34,3 +37,6 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
+        env:
+          MYSQL_HOST: localhost
+          MYSQL_PORT: ${{ job.services.mysql.ports[3306] }}
