--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -16,8 +16,9 @@ jobs:
       mysql:
         image: mysql:latest
         env:
-          MYSQL_USER: ${DB_HOST}
-          MYSQL_PASSWORD: ${DB_PASSWORD}
+          MYSQL_USER: root
+          MYSQL_PASSWORD: Gwada97195
+          MYSQL_DATABASE: company
         ports:
           - 3306:3306
     
