--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -18,10 +18,10 @@ jobs:
         ports:
           - 3306/tcp
         env:
-          MYSQL_USER: ${{ env.DB_USER }}
-          MYSQL_PASSWORD: ${{ env.DB_PASSWORD }}
-          MYSQL_DATABASE: ${{ env.DB_DATABASE }}
-          MYSQL_ROOT_PASSWORD: ${{ env.DB_PASSWORD }}
+          MYSQL_USER: root
+          MYSQL_PASSWORD: Gwada97195
+          MYSQL_DATABASE: company
+          MYSQL_ROOT_PASSWORD: Gwada97195
         options:
           --name=mysql-master
           --health-cmd="mysqladmin ping"
