test service mysql #10

--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -1,4 +1,9 @@
 name: Build and Deploy
+env:
+    MYSQL_USER: root
+    MYSQL_PASSWORD: Gwada97195
+    MYSQL_DATABASE: company
+    MYSQL_ROOT_PASSWORD: Gwada97195
 
 
 on:
@@ -14,15 +19,15 @@ jobs:
     runs-on: ubuntu-latest
     
     services:
-      mysql:
+      mysql-master:
         image: mysql:5.7
         ports:
           - 3306/tcp
         env:
-          MYSQL_USER: root
-          MYSQL_PASSWORD: Gwada97195
-          MYSQL_DATABASE: company
-          MYSQL_ROOT_PASSWORD: Gwada97195
+          MYSQL_USER: ${{ env.MYSQL_USER }}
+          MYSQL_PASSWORD: ${{ env.MYSQL_PASSWORD }}
+          MYSQL_DATABASE: ${{ env.MYSQL_DATABASE }}
+          MYSQL_ROOT_PASSWORD: ${{ env.MYSQL_PASSWORD }}
         options: >-
           --name=mysql-master
           --health-cmd="mysqladmin ping"
