--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -4,6 +4,7 @@ env:
     MYSQL_PASSWORD: Gwada97195
     MYSQL_DATABASE: company
     MYSQL_ROOT_PASSWORD: Gwada97195
+    MYSQL_HOST: localhost
 
 
 on:
@@ -17,10 +18,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     services:
       mysql:
-        image: mysql:5.7
+        image: mysql:latest
         ports:
           - 3306/tcp
         env:
