--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mysql:
-        image: mysql_server
+        image: mysql:8.0
         ports:
           - 3000:3000
     
