--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -23,6 +23,15 @@ jobs:
         image: mysql:8.0
         ports:
           - 3000:3000
+        volumes:
+          - ./docker/company-db.sql:/docker-entrypoint-initdb.d/testing-db.sql
+        environment:
+          MYSQL_ROOT_PASSWORD: "secret"
+          MYSQL_DATABASE: "company"
+          MYSQL_USER: "nono"
+          MYSQL_PASSWORD: "secret"
+        networks:
+          - devops-project_default
     
     strategy:
       matrix:
@@ -36,6 +45,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build --if-present
-      - name: Build the stack
-        run: docker-compose up
       - run: npm test
