--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -20,16 +20,15 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mysql:
-        image: mysql:8.0
+        image: mysql_server
         ports:
           - 3000:3000
-
         environment:
-          MYSQL_ROOT_PASSWORD: "secret"
-          MYSQL_DATABASE: "company"
-          MYSQL_USER: "nono"
-          MYSQL_PASSWORD: "secret"
-          
+          MYSQL_USER: ${{ env.MYSQL_USER }}
+          MYSQL_PASSWORD: ${{ env.MYSQL_PASSWORD }}
+          MYSQL_DATABASE: ${{ env.MYSQL_DATABASE }}
+          MYSQL_ROOT_PASSWORD: ${{ env.MYSQL_PASSWORD }}
+    
     strategy:
       matrix:
         node-versions: [10.x]
@@ -43,5 +42,5 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - name: Build the stack
-        run: docker-compose up
+        run: docker-compose up -d
       - run: npm test
