--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -42,5 +42,4 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - name: Build the stack
-        run: docker-compose up -d
-      - run: npm test
+        run: docker-compose up
