--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -20,9 +20,9 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mysql:
-        image: mysql:8.0
+        image: devops-project_mysql_server_1
         ports:
-          - 3306:3306
+          - 3000:3000
         env:
           MYSQL_USER: nono
           MYSQL_PASSWORD: secret
