--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -24,4 +24,4 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - name: Build the stack
-        run: docker-compose up -d
+        run: docker-compose up
