--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=Gwada97195
-DB_DATABASE=company
+MYSQL_HOST=mysql_application
+MYSQL_USER=root
+MYSQL_PASSWORD=Gwada97195
+MYSQL_ROOT_PASSWORD=Gwada97195
+MYSQL_DATABASE=company
