--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,46 @@
-version: "3.8"
+version: '3'
 
-services: 
-  app:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    ports: 
-      - 3000:3000
-    volumes: 
-      - .:/app
-      - '/app/node_modules'
-    depends_on: 
-      - mysql_server
-  
-  mysql_server:
-    image: mysql:8.0
-    environment: 
-      - MYSQL_DATABASE=company
-      - MYSQL_USER=nono
-      - MYSQL_PASSWORD=secret
-      - MYSQL_ROOT_PASSWORD=secret
+services:
+    backend_application:
+        container_name: backend_application
+        image: node:14
+        volumes: 
+            - .:/app
+            - '/app/node_modules'
+        
+        ports:
+            - 3000:3000
+        environment:
+            ENV: dev
+            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+            MYSQL_DATABASE: ${MYSQL_DATABASE}
+            MYSQL_USER: ${MYSQL_USER}
+            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+            MYSQL_HOST: ${MYSQL_HOST}
+            MYSQL_ROOT_HOST: '%'
+
+        command: >
+          bash -c " cd /app 
+          && npm i
+          && npm run test"
+    mysql_application:
+        container_name: mysql_application
+        image: mysql:8.0
+        restart: always
+        volumes:
+          - ./init:/docker-entrypoint-initdb.d
+        expose:
+            - "3306"
+        ports:
+            - 3306:3306
+        environment:
+            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+            MYSQL_DATABASE: ${MYSQL_DATABASE}
+            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+            MYSQL_HOST: ${MYSQL_HOST}
+            MYSQL_ROOT_HOST: '%'
+        depends_on:
+            - backend_application
+
+
+
