--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -25,3 +25,4 @@ jobs:
       - run: npm run build --if-present
       - name: Run test in container
         run: docker-compose up
+      - run: docker-compose down
