--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -24,5 +24,4 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - name: Run test in container
-        run: docker-compose up
-        run: docker-compose down
+        run: docker compose up --abort-on-container-exit backend_application
