--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -24,4 +24,6 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - name: Run test in container
-        run: docker compose up -d && docker logs backend_application
+        run: |
+         docker compose up -d
+         docker logs backend_application
