--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Run test in container
         run: |
          docker compose up -d
-         docker logs backend_application
+         docker logs -f backend_application
