--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
             MYSQL_DATABASE: ${MYSQL_DATABASE}
             MYSQL_USER: ${MYSQL_USER}
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-            MYSQL_HOST: ${MYSQL_HOST}
+            MYSQL_HOST: mysql_application
             MYSQL_ROOT_HOST: '%'
 
         command: >
