--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -15,6 +15,23 @@ jobs:
       matrix:
         node-versions: [10.x]
     
+    services:
+        mysql_application:
+        container_name: mysql_application
+        image: mysql:8.0
+        volumes:
+          - ./init:/docker-entrypoint-initdb.d
+        expose:
+            - "3306"
+        ports:
+            - 3306:3306
+        environment:
+            MYSQL_ROOT_PASSWORD: Gwada97195
+            MYSQL_DATABASE: company
+            MYSQL_PASSWORD: Gwada97195
+            MYSQL_HOST: mysql_application
+            MYSQL_ROOT_HOST: '%'
+    
     steps:  
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -22,6 +39,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - name: Run tests in container
-        run: |
-         docker compose up && docker compose stop
+      - name: Run test in container
+        run: npm run test
