--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -22,6 +22,7 @@ jobs:
           ports:
             - 3306:3306
           env:
+            MYSQL_USER: root
             MYSQL_ROOT_PASSWORD: Gwada97195
             MYSQL_DATABASE: company
             MYSQL_PASSWORD: Gwada97195
