--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -18,9 +18,15 @@ jobs:
     services:
       mysql_application:
           image: mysql:8.0
+
           ports:
             - 3306:3306
+          
+          options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
+          env:
+            MYSQL_ROOT_PASSWORD: Gwada97195
+            MYSQL_DATABASE: company
 
     
     steps:  
@@ -31,4 +37,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - name: Run test in container
-        run: npm run test
+      - run: mysql -h 127.0.0.1 --port 3306 -u root -ppassword -e 'CREATE DATABASE IF NOT EXISTS company;'
