--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -23,10 +23,10 @@ jobs:
             - 3306:3306
           
           options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
           env:
             MYSQL_ROOT_PASSWORD: Gwada97195
             MYSQL_DATABASE: company
+            MYSQL_HOST: mysql_application
 
     
     steps:  
