--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -36,4 +36,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - name: Run test in container
-        run: mysql -h localhost --port 3306 -u nono -ppassword 
+        run: mysql -h localhost --port 3306 -u root -ppassword 
