--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -17,10 +17,10 @@ jobs:
     
     services:
       mysql_application:
-          image: mysql:8.0
+          image: mysql:latest
 
           ports:
-            - 3306:3306
+            - 3306
           
           options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
           env:
