--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -20,11 +20,11 @@ jobs:
           image: mysql:latest
 
           ports:
-            - 3306
+            - 3306:3306
           
           options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
           env:
-            MYSQL_ROOT_PASSWORD: Gwada97195
+            MYSQL_ROOT_PASSWORD: mysql_application
             MYSQL_DATABASE: company
             MYSQL_USER: nono
             MYSQL_PASSWORD: Gwada97195
@@ -39,4 +39,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - name: Run test in container
-        run: npm run test
+        run: mysql -h mysql_application --port 3306 -u nono -ppassword
