--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -24,12 +24,8 @@ jobs:
           
           options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
           env:
-            MYSQL_ROOT_PASSWORD: mysql_application
+            MYSQL_ROOT_PASSWORD: Gwada97195
             MYSQL_DATABASE: company
-            MYSQL_USER: nono
-            MYSQL_PASSWORD: Gwada97195
-            MYSQL_HOST: mysql_application
-            MYSQL_ROOT_HOST: '%'
     
     steps:  
       - uses: actions/checkout@v2
@@ -39,4 +35,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - name: Run test in container
-        run: docker compose up -d && docker logs backend_application
+        run: npm run test
