--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -17,7 +17,7 @@ jobs:
     
     services:
       mysql_application:
-          image: mysql:latest
+          image: mysql:8.0
 
           ports:
             - 3306:3306
