--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -24,7 +24,9 @@ jobs:
           
           env:
             MYSQL_ROOT_PASSWORD: Gwada97195
-            MYSQL_DATABASE: companyy
+            MYSQL_DATABASE: company
+            MYSQL_ROOT_HOST: '%'
+
           options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:  
