--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -16,7 +16,7 @@ jobs:
         node-versions: [10.x]
     
     services:
-      mysql_application:
+      mysql:
           image: mysql:8.0
 
           ports:
