--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "nodemon index.js",
     "test": "./node_modules/.bin/mocha test/*.js --timeout 10000 --exit",
     "test-command": "node -v",
     "create-database-company": "node controllers/create/create-database-company.js",
